--- a/README.html
+++ b/README.html
@@ -602,7 +602,7 @@ padding-top: 0px;
 <body>
 
 <h1 id="readme-for-icusdata">README for icus.data</h1>
-<p>Alan Engel January 15, 2024</p>
+<p>Alan Engel January 31, 2024</p>
 <h1 id="icusdata">icus.data</h1>
 <h2 id="introduction">Introduction</h2>
 <p>Between 1972 and 2000, Sun Myung Moon’s organizations sponsored 22
@@ -629,7 +629,7 @@ first, middle and final thirds of the ICUS conferences that ran from
 1992 to 2000.</p></li>
 <li><p><strong>nobels</strong> Table of Nobel Laureates who participated
 in ICUS conferences.</p></li>
-<li><p><strong>bibset</strong> Biblatex entries for 1658 speeches and
+<li><p><strong>icusbib</strong> Biblatex entries for 1658 speeches and
 presentations in ICUS.</p></li>
 </ol>
 <h2 id="special-vignettes">Special vignettes</h2>
@@ -638,7 +638,7 @@ presentations in ICUS.</p></li>
 program brochures including, for example, attendence by Sun Myung Moon
 and his wife Han Hakja, mention of funding by the Unification Church,
 detailed coding of program sessions for use in Set entries in
-_bibset__.</p></li>
+_icusbib__.</p></li>
 <li><p><strong>build-package</strong> A vignette detailing the workflow
 for building this R data package. I am a memory-challenged novice and
 this is the result of a lot of trial and error.</p></li>
